fix alignmnent

--- a/src/components/cooking-calculator/CookingCalculator.css
+++ b/src/components/cooking-calculator/CookingCalculator.css
@@ -4,6 +4,8 @@
 	flex-direction: row;
 	justify-content: center;
 	height: 85%;
+	box-sizing: border-box;
+	padding: 100px 0 100px 0;
 }
 
 .panel {
